# PromptGen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prompt_example_main.py  prompt_flow.py  pyproject.toml  requirements.txt  start.sh  users.json.example
prompt_store/: md_to_json.ipynb
template/project2/: code.py
template/project3/: code.py
