[tool.poetry]
name = "promtflower"
version = "0.1.0"
description = ""
authors = ["srlee <leesungreong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
langchain-openai = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
